RESOLVED FIXED205871
Bytecode checkpoint fixes for arm64(e)
https://bugs.webkit.org/show_bug.cgi?id=205871
Summary Bytecode checkpoint fixes for arm64(e)
Keith Miller
Reported 2020-01-07 10:53:00 PST
Bytecode checkpoint fixes for arm64(e)
Attachments
Patch (4.01 KB, patch)
2020-01-07 10:57 PST, Keith Miller
msaboff: review+
Keith Miller
Comment 1 2020-01-07 10:57:34 PST
Michael Saboff
Comment 2 2020-01-07 11:01:16 PST
Comment on attachment 386998 [details] Patch r=me
Keith Miller
Comment 3 2020-01-07 11:02:15 PST
Saam Barati
Comment 4 2020-01-07 11:03:06 PST
Comment on attachment 386998 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=386998&action=review > Source/JavaScriptCore/dfg/DFGOSRExitCompilerCommon.cpp:150 > + return LLInt::getCodePtr<NoPtrTag>(checkpoint_osr_exit_from_inlined_call_trampoline).executableAddress(); why not make this function return a typed value instead of void*, and then caller's can unbox as needed?
Saam Barati
Comment 5 2020-01-07 11:03:18 PST
r=me too
Keith Miller
Comment 6 2020-01-07 11:42:04 PST
Comment on attachment 386998 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=386998&action=review >> Source/JavaScriptCore/dfg/DFGOSRExitCompilerCommon.cpp:150 >> + return LLInt::getCodePtr<NoPtrTag>(checkpoint_osr_exit_from_inlined_call_trampoline).executableAddress(); > > why not make this function return a typed value instead of void*, and then caller's can unbox as needed? Done, I went with MacroAssemblerCodePtr<JSEntryPtrTag> as the type.
Keith Miller
Comment 7 2020-01-07 11:44:06 PST
Keith Miller
Comment 8 2020-01-07 11:59:30 PST
Note You need to log in before you can comment on or make changes to this bug.